refactor: remove unused storage utility classes and improve storage reconciliation logic